# lora_timeseries

./: .gitignore  1_Preproccessing_Investigation.ipynb  2_Flops_Calc.ipynb  2_Initial_Preformance.ipynb  3_Flops_Calc.ipynb  3_Flops_Plan.ipynb  4_Initial_Preformance.ipynb  5_HyperParam_Tune.ipynb  5_Lora_Model.ipynb  6_HyperParam_Tune.ipynb  7_Final_Training.ipynb  8_Final_Flops_Count.ipynb  Full_hyper_wandbsweep.py  Full_run_script.py  LICENSE.txt  README.md  lora_skeleton.py  pyproject.toml  requirements.txt  wandb_hyperparam.yaml  wandb_hyperparam_1.yaml
coursework_docs/: README_Miles.md
docs/: requirements.txt
docs/source/: conf.py  index.rst  src.analysis.rst  src.dataset.rst  src.decoder.rst  src.evaluate.rst  src.flops_counter.rst  src.full_model.rst  src.generate.rst  src.preprocessor.rst  src.qwen.rst  src.train.rst
notebooks/: 1_Preproccessing_Investigation.ipynb  2_Flops_Calc.ipynb  3_Flops_Plan.ipynb  4_Initial_Preformance.ipynb  5_Lora_Model.ipynb  6_HyperParam_Tune.ipynb  7_Final_Training.ipynb  8_Final_Flops_Count.ipynb
results/Baseline/: Untrained.json
results/Evaluation/: InitialQwenAnalysis.json
results/Final/: FinalTestEval.json  FinalTraining.json  Trained_Gen.json
results/Hyperparam/Hyperparam_Decimal/: DP2Learn1e-05Lora4Token256.json  (+1 more)
results/Initial_Lora/: Default_Gen.json  Default_Testloss.json  Default_Values.json  Overfit_Train.json
src/: __init__.py  analysis.py  dataset.py  decoder.py  evaluate.py  flops_counter.py  full_model.py  generate.py  hyperparam.py  preprocessor.py  qwen.py  train.py  wandb.py  wandb_tune.py
(+9 files in other folders)
